syntax="proto2";
package gpb;
option optimize_for = LITE_RUNTIME;

/* Raft protocol messages, see include/rlite/raft.hpp */

message RaftRequestVote {
    required uint32 term = 1;
    required string candidate_id = 2;
    required uint32 last_log_index = 3;
    required uint32 last_log_term = 4;
}

message RaftRequestVoteResp {
    required uint32 term = 1;
    required bool vote_granted = 2;
}

message RaftLogEntry {
    required uint32 term = 1;
    required bytes buffer = 2;
};

message RaftAppendEntries {
    required uint32 term = 1;
    required string leader_id = 2;
    required uint32 leader_commit = 3;
    required uint32 prev_log_index = 4;
    required uint32 prev_log_term = 5;
    repeated RaftLogEntry entries = 6;
}

message RaftAppendEntriesResp {
    required uint32 term = 1;
    required string follower_id = 2;
    required uint32 log_index = 3;
    required bool success = 4;
}

/* Message types for client requests and responses. */
message RaftClientRequest {
    required string source = 1; /* client name */
    required uint32 id = 2; /* request identifier, to match responses */
    required bytes request = 3; /* the serialized command */
};

message RaftClientResponse {
    required uint32 id = 1; /* id matching the request */
    required bool success = 2; /* true if request was successful */
};
